--- a/Taller Cerveza/static/index.html
+++ b/Taller Cerveza/static/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Taller Bebidas</title>
         <link rel="stylesheet" type="text/css" href="Recursos\bower_components\bootstrap\dist\css\bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="Recursos\css\style.css">
         <script type="text/javascript" src="Recursos\bower_components\jquery\dist\jquery.js"></script>
         <script type="text/javascript" src="Recursos\bower_components\angular\angular.js"></script>
         <script type="text/javascript" src="Recursos\bower_components\bootstrap\dist\js\bootstrap.js"></script>
@@ -12,7 +13,7 @@
     <div class="container-fluid">
     <header>
          <nav class="navbar navbar-inverse">
-             <a href="#" class="Brand">Taller Cerveza</a>
+             <a href="#" class="navbar-brand">Taller Cerveza</a>
          </nav>
     </header>
 
