--- a/Taller Cerveza/static/gestionLogo.html
+++ b/Taller Cerveza/static/gestionLogo.html
@@ -32,7 +32,8 @@
      <div class="col-md-8">
         <div class="panel-group">
                  <div class="panel panel-default">
-                     <div class="panel-body"><h2 class=" text-center">Gestión Logo</h2></div>
+                     <div class="panel-body"><h2 class=" text-center"> 
+                     <span class="glyphicon glyphicon-glass"></span> Gestión Logo</h2></div>
                 </div> 
                  <div class="panel panel-primary">
                  <div class="panel-body">
