--- a/Taller Cerveza/static/gestionCerveza.html
+++ b/Taller Cerveza/static/gestionCerveza.html
@@ -19,7 +19,7 @@
 
             <header>
                 <nav class="navbar navbar-inverse">
-                    <a href="index.html" class="navbar-brand">Taller Cerveza</a>
+                    <a href="index.html" class="navbar-brand"><span class="glyphicon glyphicon-home"></span> Taller Cerveza</a>
                 </nav>
             </header>
 
@@ -39,30 +39,44 @@
 
                                 <div class="panel-heading">
 
-                                    <h3 class="panel-title">Gestión Cerveza</h3>
+                                    <h3 class="panel-title"><span class="glyphicon glyphicon-glass"></span> Gestión Cerveza</h3>
                                 </div>
                                 <div class="panel-body">
                                     <form name="formCerveza" role="form">
+
+                                    <div class="msgServidor">
+                                        
+                                    </div>
+
+                                    <div ng-show="formCerveza.nombre.$dirty">
+                                        <div ng-show="formCerveza.nombre.$error.required" class="alert alert-danger"
+                                         role="alert">El campo nombre es Obligatorio</div>
+                                    </div>
                                         <div class="form-group">
 
                                             <input type="text"  class="form-control" id="nombre"  style="display: none;" ng-model="identificacion.codigo">
                                         </div>  
-                                        <div class="form-group">
+                                        <div class="form-group" ng-class="{'has-error' : formCerveza.nombre.$invalid,'has-success' : formCerveza.nombre.$valid}">
                                             <label for="Nombre">Nombre:</label>
-                                            <input type="text" class="form-control" id="nombre"  placeholder="nombre" ng-model="identificacion.nombre">
+                                            <input type="text" class="form-control" name="nombre"  placeholder="nombre" ng-model="identificacion.nombre" autofocus required>
                                         </div>
-                                        <div class="form-group">
+
+                                         <div ng-show="formCerveza.descripcion.$dirty">
+                                            <div ng-show="formCerveza.descripcion.$error.required" class="alert alert-danger"
+                                         role="alert">El campo descripcion es Obligatorio</div>
+                                        </div>
+                                        <div class="form-group" ng-class="{'has-error' : formCerveza.descripcion.$invalid,'has-success' : formCerveza.descripcion.$valid}">
                                             <label for="descripcion">Descripcion:</label>
-                                            <input type="text" class="form-control" id="descripcion" placeholder="descripcion"  ng-model="identificacion.descripcion">
+                                            <input type="text" class="form-control" id="descripcion" placeholder="descripcion" name="descripcion"  ng-model="identificacion.descripcion" required>
                                         </div>
                                         <div class="form-group">
                                             <label for="Porcentaje">Procentaje Alcohol:</label>
-                                            <input type="text" class="form-control" id="porcentaje"  placeholder="Porcentaje" ng-model="identificacion.porcentaje">
+                                            <input type="number" class="form-control" id="porcentaje"  placeholder="Porcentaje" ng-model="identificacion.porcentaje" step="any" min="1" max="15" required>
                                         </div>
 
                                         <div class="btn-group btn-group-justified">
-                                            <a href="#" class="btn btn-success" ng-click="guardar('formCerveza')">Guardar</a>
-                                            <a href="#" class="btn btn-warning" ng-click="modificar('formCerveza')" disabled>Editar</a>
+                                            <a href="#" class="btn btn-success" ng-disabled="formCerveza.$invalid" ng-click="guardar('formCerveza')">Guardar</a>
+                                            <a href="#" id="btnEditar" class="btn btn-warning" ng-click="modificar('formCerveza.$valid')" disabled>Editar</a>
                                             <!--<a href="#" class="btn btn-danger" ng-click="eliminar('formCerveza')" disabled>Eliminar</a> -->
                                         </div>
 
@@ -88,7 +102,7 @@
                                         <span class="input-group-addon">
                                             <i class="glyphicon glyphicon-search"></i>
                                         </span>
-                                        <input type="text" class="form-control" placeholder="Buscar Produccion" ng-model="buscar">
+                                        <input type="text" class="form-control" placeholder="Tipos de Cervezas" ng-model="buscar">
                                     </div>
                                 </div>
                                 <div class="panel-body">
@@ -127,7 +141,7 @@
                                                     </th>
                                             </thead>
                                             <tbody>
-                                                <tr ng-click="mostrarCampos(obj.ID)" ng-repeat="obj in cervezas| orderBy: ordenSeleccionado | filter:buscar">
+                                                <tr ng-click="mostrarCampos(obj.codigo)" ng-repeat="obj in cervezas| orderBy: ordenSeleccionado | filter:buscar">
                                                     <td>{{obj.codigo| uppercase}}</td>
                                                     <td>{{obj.nombre| uppercase}}</td>
                                                     <td>{{obj.descripcion| uppercase}}</td>
