Se agrega la funcionalidad de cambio de logo y se realizan correcciones sobre el código

--- a/Taller Cerveza/static/gestionPresentacion.html
+++ b/Taller Cerveza/static/gestionPresentacion.html
@@ -24,7 +24,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <img src="Recursos/img/descarga.jfif" alt="" class="img-circle img-responsive center-block">
+                        <img src="Recursos/img/descarga.jfif" style="height: 200px;" alt="" class="img-circle img-responsive center-block">
                     </div>
                 </div>
                 <br>
