--- a/Taller Cerveza/static/gestionProduccion.html
+++ b/Taller Cerveza/static/gestionProduccion.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="row">
   <div class="col-md-12">
-     <img src="Recursos/img/descarga.jfif" alt="" class="img-circle img-responsive center-block">
+     <img src="Recursos/img/descarga.jfif" style="height: 200px;" alt="" class="img-circle img-responsive center-block">
   </div>
 </div>
 <br>
@@ -42,7 +42,7 @@
         <form name="formProduccion" role="form">
               <div class="form-group">
 
-              <label for="codigo">Codigo:</label>
+              <label for="codigoPro">Codigo:</label>
               <input type="text"  class="form-control" id="codigoPro"  placeholder="codigo" ng-model="identificacion.codigo">
             </div>  
             <div class="form-group">
