--- a/Taller Cerveza/static/gestionCerveza.html
+++ b/Taller Cerveza/static/gestionCerveza.html
@@ -14,24 +14,24 @@
     </head>
     <body ng-app="appControladorCerveza">
 
-    <div ng-controller="CtlCerveza">
-         <div class="container-fluid">
+        <div ng-controller="CtlCerveza">
+            <div class="container-fluid">
 
-            <header>
-                <nav class="navbar navbar-inverse">
-                    <a href="index.html" class="navbar-brand"><span class="glyphicon glyphicon-home"></span> Taller Cerveza</a>
-                </nav>
-            </header>
+                <header>
+                    <nav class="navbar navbar-inverse">
+                        <a href="index.html" class="navbar-brand"><span class="glyphicon glyphicon-home"></span> Taller Cerveza</a>
+                    </nav>
+                </header>
 
-            <div class="container">
+                <div class="container">
 
-                <div class="row">
-                    <div class="col-md-12">
-                        <img src="Recursos/img/descarga.jfif" alt="" class="img-circle img-responsive center-block">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <img src="Recursos/img/descarga.jfif"  style="height: 200px;" alt="" class="img-circle img-responsive center-block">
+                        </div>
                     </div>
-                </div>
-                <br>
-              
+                    <br>
+
                     <div class="row">
                         <div class="col-md-12">
 
@@ -44,14 +44,14 @@
                                 <div class="panel-body">
                                     <form name="formCerveza" role="form">
 
-                                    <div class="msgServidor">
-                                        
-                                    </div>
+                                        <div class="msgServidor">
 
-                                    <div ng-show="formCerveza.nombre.$dirty">
-                                        <div ng-show="formCerveza.nombre.$error.required" class="alert alert-danger"
-                                         role="alert">El campo nombre es Obligatorio</div>
-                                    </div>
+                                        </div>
+
+                                        <div ng-show="formCerveza.nombre.$dirty">
+                                            <div ng-show="formCerveza.nombre.$error.required" class="alert alert-danger"
+                                                 role="alert">El campo nombre es Obligatorio</div>
+                                        </div>
                                         <div class="form-group">
 
                                             <input type="text"  class="form-control" id="nombre"  style="display: none;" ng-model="identificacion.codigo">
@@ -61,9 +61,9 @@
                                             <input type="text" class="form-control" name="nombre"  placeholder="nombre" ng-model="identificacion.nombre" autofocus required>
                                         </div>
 
-                                         <div ng-show="formCerveza.descripcion.$dirty">
+                                        <div ng-show="formCerveza.descripcion.$dirty">
                                             <div ng-show="formCerveza.descripcion.$error.required" class="alert alert-danger"
-                                         role="alert">El campo descripcion es Obligatorio</div>
+                                                 role="alert">El campo descripcion es Obligatorio</div>
                                         </div>
                                         <div class="form-group" ng-class="{'has-error' : formCerveza.descripcion.$invalid,'has-success' : formCerveza.descripcion.$valid}">
                                             <label for="descripcion">Descripcion:</label>
