validar el logo

--- a/Taller Cerveza/static/gestionLogo.html
+++ b/Taller Cerveza/static/gestionLogo.html
@@ -41,7 +41,7 @@
                                     <form method="post" name="formLogo"  action="/subirArchivo" enctype="multipart/form-data">
 
                                         <label>Seleccione el logo:</label><br>
-                                        <input type="file" class="" name="Logo" accept=".jpeg, .jpg, .png">
+                                        <input type="file" class="" name="Logo" accept=".jpeg, .jpg, .png" required>
                                         <br>
                                         <input type="submit" value="Cambiar Logo" class="btn-success">
 
