Implementacion cambios servicio

--- a/Taller Cerveza/static/gestionPresentacion.html
+++ b/Taller Cerveza/static/gestionPresentacion.html
@@ -63,8 +63,8 @@
                                             <input type="number" class="form-control" step="any" name="precio" id="descripcion" placeholder="$precio" min="0"  ng-model="identificacion.precio">
                                         </div>
                                         <div class="btn-group btn-group-justified">
-                                            <a href="#" class="btn btn-success" ng-disabled="formPresentacion.$invalid" ng-click="guardar('formPresentacion.$valid')">Guardar</a>
-                                            <a href="#" id="btnEditar" class="btn btn-warning" ng-click="modificar('formPresentacion')" disabled>Editar</a>
+                                            <span  class="btn btn-success" ng-disabled="formPresentacion.$invalid" ng-click="guardar('formPresentacion.$valid')">Guardar</span>
+                                            <span  id="btnEditar" class="btn btn-warning" ng-click="modificar('formPresentacion')" disabled>Editar</span>
                                         </div>
 
                                         <br>
