commit crud con express

--- a/Taller Cerveza/static/gestionProduccion.html
+++ b/Taller Cerveza/static/gestionProduccion.html
@@ -71,8 +71,8 @@
                                         <div class="form-group" ng-class="{'has-error' : formProduccion.tipo.$invalid,'has-success' : formProduccion.tipo.$valid}">
 
                                             <label for="sel1">Tipo de Cerveza:</label>
-                                            <select class="form-control" name="tipo" id="sel1" ng-model="identificacion.selTipo" ng-options="cervezas.nombre for cervezas in cervezas" required>
-                                                <option value="-1">Seleccione</option>
+                                            <select class="form-control" name="tipo" id="sel1" ng-model="identificacion.selTipo" ng-options="c.nombre as c.nombre for c in cervezas" required>
+                                               
                                             </select>
 
 
@@ -86,9 +86,8 @@
                                         <div class="form-group" ng-class="{'has-error' : formProduccion.presentacion.$invalid,'has-success' : formProduccion.presentacion.$valid}">
 
                                             <label for="pre">Presentaciones:</label>
-                                            <select class="form-control" name="presentacion" id="sel1" ng-model="identificacion.selPresentacion" ng-options="presentaciones.cantidad for presentaciones in presentaciones" required>
-                                                <option value="-1">Seleccione</option>                 
-
+                                            <select class="form-control" name="presentacion" id="sel1" ng-model="identificacion.selPresentacion" ng-options="p.cantidad as p.cantidad for p in presentaciones" required>
+                                               
                                             </select>
 
 
@@ -105,8 +104,8 @@
                                         </div>
 
                                         <div class="btn-group btn-group-justified">
-                                            <a href="#" class="btn btn-success"  ng-disabled="formProduccion.$invalid"  ng-click="guardar('formProduccion.$invalid')">Guardar</a>
-                                            <a href="#" class="btn btn-warning" id="btnEditar" ng-click="modificar('formProduccion')" disabled>Editar</a>
+                                            <span class="btn btn-success"  ng-disabled="formProduccion.$invalid"  ng-click="guardar('formProduccion.$invalid')">Guardar</span>
+                                            <span class="btn btn-warning" id="btnEditar" ng-click="modificar('formProduccion')" disabled>Editar</span>
 
                                         </div>
 
@@ -189,12 +188,12 @@
                                 orderBy: ordenSeleccionado | filter:buscar">
                                                     <td>{{obj.codigo| uppercase}}</td>
                                                     <td>{{obj.fecha| uppercase}}</td>
-                                                    <td>{{obj.tipo| uppercase}}</td>
-                                                    <td>{{obj.presentacion| uppercase}}</td>
+                                                    <td>{{obj.selTipo| uppercase}}</td>
+                                                    <td>{{obj.cantidad| uppercase}}</td>
                                                     <td>{{obj.comentarios| uppercase}}</td>
-                                                    <td style="display: none;">{{obj.tipoPresentacion| uppercase}}</td>
-                                                    <td style="display: none;">{{obj.tipoCerveza| uppercase}}</td>
-                                                    <td><a class="glyphicon glyphicon-trash" ng-click="eliminar(obj.codigo)"></a></td>
+                                                  <!--   <td style="display: none;">{{obj.cantidad| uppercase}}</td>
+                                                    <td style="display: none;">{{obj.tipoCerveza| uppercase}}</td> -->
+                                                    <td><span class="glyphicon glyphicon-trash" ng-click="eliminar(obj.codigo)"></span></td>
 
                                                 </tr>
 
