Implementacion cambios servicio

--- a/Taller Cerveza/static/gestionPresentacion.html
+++ b/Taller Cerveza/static/gestionPresentacion.html
@@ -125,7 +125,7 @@
                                                                         <td>{{obj.codigo| uppercase}}</td>
                                                                         <td>{{obj.cantidad| uppercase}}</td>
                                                                         <td>{{obj.precio| uppercase}}</td>
-                                                                        <td><a class="glyphicon glyphicon-trash" ng-click="eliminar(obj.codigo)"></a></td>
+                                                                        <td><span class="glyphicon glyphicon-trash" ng-click="eliminar(obj.codigo)"></span></td>
                                                                     </tr>
                                                                 </tbody>
                                                             </table>
