--- a/Taller Cerveza/static/gestionCerveza.html
+++ b/Taller Cerveza/static/gestionCerveza.html
@@ -70,8 +70,8 @@
                                             <input type="text" class="form-control" id="descripcion" placeholder="descripcion" name="descripcion"  ng-model="identificacion.descripcion" required>
                                         </div>
                                         <div class="form-group">
-                                            <label for="Porcentaje">Procentaje Alcohol:</label>
-                                            <input type="number" class="form-control" id="porcentaje"  placeholder="Porcentaje" ng-model="identificacion.porcentaje" step="any" min="1" max="15" required>
+                                            <label for="porcentaje">Procentaje Alcohol:</label>
+                                            <input type="number" class="form-control" id="porcentaje"  placeholder="Porcentaje" ng-model="identificacion.porcentaje" step="any" min="1" max="1000000" required>
                                         </div>
 
                                         <div class="btn-group btn-group-justified">
